<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoodDeed</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">326304737522670</string>
    <string name="create_button_confirm">Create</string>
    <string name="create_button_cancel">Cancel</string>
    
    <string name="deed_main_create">Propose a Good Deed</string>
    
    <string name="deed_create_title">Title</string>
    <string name="deed_create_title_value"></string>
    <string name="deed_create_desc">Description</string>
    <string name="deed_create_desc_value"></string>
    <string name="deed_create_donation">Committed Donation</string>
    <string name="deed_create_donation_value"></string>
    <string name="create_deed_media">Attach Photos</string>
    <string name="create_deed_media_value"></string>
    
    <string name="deed_view_title">Title</string>
    <string name="deed_view_title_value"></string>
    <string name="deed_view_desc">Description</string>
    <string name="deed_view_desc_value"></string>
    <string name="deed_view_donation">Committed Donation</string>
    <string name="deed_view_donation_value"></string>
    
    <string name="deed_view_commit_to_donate">Commit to Donate</string>
    <string name="deed_view_commit_to_do">Commit to Do</string>

</resources>
